--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -107,6 +107,14 @@
             </div>
           </div>
 
+          <div class="container col-md-4">
+            <div class="container-lg  selectionDiv" (click)="openModal('listRoomTypes')">
+              <div class="form-floating mb-3">
+                  <h3 class="title" >List RoomTypes</h3>
+              </div>
+            </div>
+          </div>
+
         <div class="container col-md-4">
           <div class="container-lg  selectionDiv" (click)="openModal('insertMedicalCondition')">
             <div class="form-floating mb-3">
@@ -2678,7 +2686,117 @@
 
 
 
+<div [ngStyle]="{'display': isModalOpen('listRoomTypes') ? 'block' : 'none'}" id="listRoomTypes" class="modal">
+  <div id="mapModalContent" class="modal-content">
+    <span (click)="closeModal('listRoomTypes')" class="close">&times;</span>
 
+    <form class="row g-3 needs-validation" novalidate="">
+      <div class="col-md-10"></div>
+
+     
+
+      <!-- Tabela -->
+      <div class="col-md-12" style="overflow: auto; max-height: 60vh; border: 1px solid #ccc; border-radius: 8px; padding: 10px;">
+        <div class="table-wrapper">
+          <div class="table-title">
+            <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th (click)="sortDataRoomTypes('index')"># <i [ngClass]="getSortIconRoomType('index')"></i></th>
+                  <th (click)="sortDataRoomTypes('code')">Code <i [ngClass]="getSortIconRoomType('code')"></i></th>
+                  <th (click)="sortDataRoomTypes('descricao')">Description <i [ngClass]="getSortIconRoomType('descricao')"></i></th>
+                  <th (click)="sortDataRoomTypes('designacao')">Designation <i [ngClass]="getSortIconRoomType('designacao')"></i></th>
+                  <th (click)="sortDataRoomTypes('surgerySuitable')">Surgery Suitable <i [ngClass]="getSortIconRoomType('surgerySuitable')"></i></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let request of roomTypesList; let i = index"
+                    (click)="selectRoomTypes(request.code)"
+                    [ngClass]="{ 'selected-row': selectedRoomTypesCode === request.code }">
+                  <td>{{ i + 1 }}</td>
+                  <td>{{ request.code }}</td>
+                  <td>{{ request.descricao }}</td>
+                  <td>{{ request.designacao }}</td>
+                  <td id="active_{{ request.roomTypeId }}_{{ request.surgerySuitable }}">
+                    <span *ngIf="request.surgerySuitable; else failure" class="badge rounded-pill bg-success">Yes</span>
+                    <ng-template #failure>
+                      <span class="badge rounded-pill bg-danger">No</span>
+                    </ng-template>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
+      <!-- Botão Editar -->
+      <div class="col-md-12">
+        <div class="row justify-content-end mt-3">
+          <div class="col-md-3 text-end">
+            <button class="fs-5 btn btn-outline-warning" (click)="updateRoomTypes()" id="updateRoomTypesModal">
+              Edit <i class="bi bi-pencil-square"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
+
+
+
+
+    
+    <div [ngStyle]="{'display': isModalOpen('UpdateRoomTypesModal') ? 'block' : 'none'}" id="UpdateRoomTypesModal" class="modal">
+      <div class="modal-content">
+        <span (click)="closeModal('UpdateRoomTypesModal')" class="close">&times;</span>
+        <form [formGroup]="roomTypeUpdateForm" class="row g-3 needs-validation" novalidate>
+          <div class="row g-3">
+            <div class="col-md-12">
+              <label for="designacao" class="form-label">Room Type Name</label>
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-badge-fill"></i></span>
+                <input type="text" id="designacao" class="form-control" formControlName="designacao">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <label for="descricao" class="form-label">Description</label>
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="basic-addon1"><i class="bi bi-clock-fill"></i></span>
+                <input type="text" id="descricao" class="form-control" formControlName="descricao">
+              </div>
+            </div>
+
+
+            <div class="col-md-12">
+              <label for="surgerySuitable" class="form-label">Surgery Suitable</label>
+              <div class="input-group has-validation">
+                <span class="input-group-text" id="basic-addon1"><i class="bi bi-check-circle-fill"></i></span>
+                <select class="form-control" id="surgerySuitable" formControlName="surgerySuitable">
+                  <option value="true">Yes</option>
+                  <option value="false">No</option>
+                </select>
+              </div>
+            </div>
+            
+            
+
+
+
+
+            <div class="col-md-12">
+              <button type="button" class="btn btn-secondary" (click)="openPolicyModal()">Read and Agree to Policy</button>
+            </div>
+            <div class="col-md-12">
+              <button class="btn btn-primary" [disabled]="!isPolicyAccepted" (click)="onUpdateRoomTypes()">Submit Form</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    
 
 
 
