update user page with policy

--- a/angular-three/src/app/pages/Admin/admin/admin.component.html
+++ b/angular-three/src/app/pages/Admin/admin/admin.component.html
@@ -427,7 +427,7 @@
 
             <div class="col-md-4">
               <label for="emergencyContactName" class="form-label">Name</label>
-              <input type="text" class="form-control" id="emergencyContactName" formControlName="emergencyContactName" required="">
+              <input type="text" class="form-control" id="emergencyContactName" formControlName="nameEmergency" required="">
               <div class="valid-feedback">
                 Looks good!
               </div>
@@ -435,7 +435,7 @@
 
             <div class="col-md-4">
               <label for="emergencyContactEmail" class="form-label">Email</label>
-              <input type="email" class="form-control" id="emergencyContactEmail" formControlName="emergencyContactEmail" required="">
+              <input type="email" class="form-control" id="emergencyContactEmail" formControlName="emailEmergency" required="">
               <div class="invalid-feedback">
                 Please choose a valid email.
               </div>
@@ -443,7 +443,7 @@
 
             <div class="col-md-4">
               <label for="emergencyContactPhone" class="form-label">Phone</label>
-              <input type="number" class="form-control" id="emergencyContactPhone" formControlName="emergencyContactPhone" min="0" max="999999999" required="">
+              <input type="number" class="form-control" id="emergencyContactPhone" formControlName="phoneEmergency" min="0" max="999999999" required="">
               <div class="valid-feedback">
                 Looks good!
               </div>
